# rustypaper

./: .dockerignore  .env.exmaple  .gitignore  Cargo.toml  Dockerfile  README.md  db-setup.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-entrypoint.sh  sqlx-data.json
.sqlx/: query-0b9e320e76279a438bfa8d708934375844f66fb14c66ca4c1226e2d93ec6669a.json  query-0f78c2a79d49db83fb49838423e0fa9b9cb20feaa898ffee87d98aea017a20ab.json  query-2a72d7fc8aa1c82b2ba3fcd2c99abb95de49943a197797c3ceb55ccec5804ca2.json  query-4bb7de72c9c57df973ab75096b6dc303c6b7a06a44b03a3f107a9762c8ba7b76.json  query-840503059b806d7331eedb68bf1a9463dced2c0ee530a8783f46cfb35a134da1.json  query-8de1c8e3ed5b6e761ae05540a4b986f7a29862b167a4a72fd148a3d0100efbce.json  query-b085e7766b0b8b8bd200653c4ceeb3d21b77ea276f34043f878b763e63010a8e.json  query-c598d28127a5b34075d1ca37f73e7c45d7bad85293f976c577ce3df2eb1fa410.json  query-f81fd3ae933d55c7d686a1aa6a81e220663a4d7e95c9da07f9635840abda3e1a.json
migrations/: 20220422102756_initial.down.sql  20220422102756_initial.up.sql
src/lib/: data.rs  domain.rs  lib.rs  service.rs  web.rs
src/lib/data/: database.rs  id.rs  model.rs
src/lib/data/model/: post.rs  user.rs
src/lib/data/model/post/: dto.rs
src/lib/data/model/user/: dto.rs
src/lib/data/query/: post.rs  user.rs
src/lib/domain/: datetime.rs  post.rs  timestamp.rs  token_generator.rs  user.rs  validation.rs
src/lib/domain/post/: field.rs
src/lib/domain/post/field/: author_id.rs  content.rs  created_at.rs  is_published.rs  post_id.rs  shortcode.rs  title.rs  updated_at.rs
src/lib/domain/timestamp/: created_at.rs  updated_at.rs
src/lib/domain/user/: field.rs
src/lib/domain/user/field/: email.rs  first_name.rs  last_name.rs  password.rs  user_id.rs
src/lib/domain/validation/: string.rs
src/lib/service/: action.rs
src/lib/service/action/: auth.rs  post.rs  user.rs
src/lib/service/object/: auth.rs  post.rs  user.rs
src/lib/service/object/auth/: dto.rs
src/lib/service/object/post/: dto.rs
src/lib/service/object/user/: dto.rs
src/lib/web/: extractor.rs  form.rs  response.rs  router.rs  server.rs
src/lib/web/catcher/: api.rs
src/lib/web/form/: auth.rs  pagination.rs  post.rs  user.rs
src/lib/web/router/: auth.rs  post.rs
src/lib/web/routes/: post.rs
