[package]
name = "rusty-paper"
authors = ["Saeed Andalib <saeedandalib5@gmail.com>"]
description = "Personal blog backend."
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["blog", "weblog"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustypaper"
path = "src/lib/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
uuid = { version = "0.8", features = ["v4", "serde"] }
derive_more = "0.99"
