[package]
name = "rustypaper"
authors = ["Saeed Andalib <saeedandalib5@gmail.com>"]
description = "Personal blog backend."
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["blog", "weblog"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustypaper"
path = "src/lib/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
uuid = { version = "1.7", features = ["v4", "serde"] }
derive_more = "0.99"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "macros",
] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
envy = "0.4"
validator = { version = "0.16", features = ["derive"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "9.2"
axum = { version = "0.7", features = ["macros"] }
tracing-subscriber = "0.3"
tower = "0.4"
axum-extra = { version = "0.9", features = ["cookie-private"] }
